Adjust content as a first pass

--- a/website/blog/2018-10-24-example.md
+++ b/website/blog/2018-10-24-example.md
@@ -1,5 +1,5 @@
 ---
-title: It's third day
+title: Example Entry
 date: 2018-10-24 23:43:55
 description: "Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id."
 image: "https://i.imgur.com/qeKTrnD.jpg"
@@ -8,6 +8,8 @@ _id: 3
 ---
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
+![Image](./images/imat-bagja-gumilar-518288-unsplash.jpg)
 
 Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
 
@@ -26,3 +28,5 @@ Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in
 Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus.
 
 Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet.
+
+![Image](./images/sergei-akulich-457851-unsplash.jpg)
